# telemachus-cli

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: build.yml
cli/: main.py
cli/adapters/: __init__.py  aegis.py  pvs.py  uah_driveset.py
